# cryto-feed-cicd

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: fetch_prices.py
app/sources/: __init__.py  base.py  binance.py  coinbase.py  coincap.py  coingecko.py
app/storage/: writer.py
app/web/: fetch_prices.py  server.py
tests/: test_parsers.py  test_writer.py
