[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-snapshots"
version = "0.1.0"
description = "Prototype crypto snapshot app"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "requests==2.32.3",
    "pytest==8.2.0",
]

[tool.setuptools]
packages = ["app"]
